# poverty

./: .dockerignore  .env  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  gunicoren.py  gunicorn-dev.py  main.py  manage.py  nginx_dev.conf  nginx_prod.conf  pyproject.toml  requirements.txt  settings.py
api/: admin.py  apps.py  common.py  decorators.py  docs.py  exceptions.py  middleware.py  response.py  serializers.py  signals.py  tasks.py  urls.py
api/templatetags/: tags.py
apps/: __init__.py  arq.py  depends.py  factory.py  listener.py  response.py  types.py
apps/admin/: __init__.py  depends.py  responses.py  schemas.py
apps/admin/paralib/: __init__.py  depends.py
apps/admin/routes/: __init__.py  login.py  rest.py  site.py
apps/api/: __init__.py  depends.py
apps/api/jobs/: __init__.py
apps/api/routes/: __init__.py
apps/web/: __init__.py  common.py
apps/web/routes/: __init__.py  docer.py  qrcode.py
dashboard/: urls.py
db/: base.py  curd.py  enums.py  models.py
migrations/models/: 0_202032052220153238_init.json  0_202039052320003953_init.json  1_202001052220160134_update.json  old_models.py
paralib/: encrypt.py  redis.py  utils.py
poverty/: admin.py  apps.py  celery.py  common.py  settings.py  urls.py  wsgi.py
runner/: worker.py  workers.py
templates/: base.html
templates/web/: failure.html  success.html  upload_file.html
